maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:16: error: ':' expected but ',' found.
def marqueCase(x: Int, y: Int, poids, Int) {
                                    ^JediEscaper:46: error: identifier expected but '}' found.
}
^